Implemented: - Property - other refactor - authentication