@@ -5,9 +5,12 @@ import group3_real_estate_rental_system.Booking.BookingService;
 import group3_real_estate_rental_system.Booking.BookingStatus;
 import group3_real_estate_rental_system.Booking.dto.BookingDTO;
 import group3_real_estate_rental_system.Booking.entity.Booking;
+import group3_real_estate_rental_system.User.Role;
 import group3_real_estate_rental_system.User.UserRepository;
-import group3_real_estate_rental_system.User.entity.User;
 import group3_real_estate_rental_system.User.UserService;
+import group3_real_estate_rental_system.User.dto.UserDTO;
+import group3_real_estate_rental_system.User.dto.UserRequest;
+import group3_real_estate_rental_system.User.entity.User;
 import group3_real_estate_rental_system.common.Address;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -96,15 +99,36 @@ public class DemoDataPopulate {
         Address address4 = new Address("321 Maple St", "Washington", "DC", "20001", "USA");
         Address address5 = new Address("654 Pine St", "Boston", "MA", "02101", "USA");
 
-        User admin1 = new User("Alice", "Johnson", "alice_admin", "securepass123","hewwi@","283933839","https://www.google.com/imgres?q=image&imgurl=https%3A%2F%2QAA", address1);
+        User admin1 = new User("Alice", "Johnson", "alice_admin", "securepass123", "hewwi@", "283933839", "https://www.google.com/imgres?q=image&imgurl=https%3A%2F%2QAA", address1);
 
 
-        userRepository.saveAll(Arrays.asList(admin1));
+        userRepository.saveAll(List.of(admin1));
 
-        System.out.println("Dummy Admin data inserted successfully!");
+        // Example 1: Create Admin user
+        createUserWithRole(userService, "John", "Doe", "john", "john.doe@example.com", "123-456-7890", "photo.jpg", "ADMIN");
+
+        // Example 2: Create Tenant user
+        createUserWithRole(userService, "Jane", "Smith", "jane", "jane.smith@example.com", "987-654-3210", "tenant-photo.jpg", "TENANT");
+
+        // Example 3: Create Property Owner user
+        createUserWithRole(userService, "Mike", "Johnson", "mike", "mike.johnson@example.com", "555-555-5555", "owner-photo.jpg", "PROPERTIES_OWNER");
 
 
         return null;
     }
+    // Method to create a user with a specific role
+    private static void createUserWithRole(UserService userService, String firstName, String lastName, String userName, String email, String phoneNumber, String photo, String roleType) {
+        // Set the address (default or fetched from elsewhere)
+        Address address = new Address("Default Street", "City", "State", "12345", "Country");
 
+        // Determine role from the roleType string
+        Role role = Role.valueOf(roleType.toUpperCase());
+
+        // Create a new UserDTO with the provided information
+        UserRequest userDTO = new UserRequest(firstName, lastName, userName, email, phoneNumber, photo, "123",role, address);
+        userDTO.setRole(role); // Set the role for the user
+
+        // Call the existing service method to add the user
+        userService.addUser(userDTO); // This is where the original addUser method is called
+    }
 }
